# yadro_test_task

./: CMakeLists.txt
main/: CMakeLists.txt  main.cpp
tapelib/: CMakeLists.txt  FileTape.cpp  TapeSorter.cpp  in.txt  out.txt
tapelib/include/: FileTape.h  Tape.h  TapeSorter.h
tests/: CMakeLists.txt  FileTapeTests.cc  TapeSorterTests.cc
